# auto-shell

./: .editorconfig  .gitattributes  .gitignore  README.md  config.yaml  debug_tools.py  main.py  pyproject.toml
auto_shell/: __init__.py  agent.py  cli.py  config.py  context.py  llm_client.py  server.py
daemon/: llm_client.py  server.py
plugin/: auto-shell.plugin.zsh
tests/: test_auto_shell.py
